# simc_wotlk

./: .gitignore  CMakeLists.txt  README.md  UpgradeLog.htm  simc.sln  simc.vcxproj
engine/: CMakeLists.txt  Death_Knight_T10.html  Druid_T10.html  Hunter_T10.html  Mage_T10.html  Mage_T9.html  Paladin_T10.html  Priest_T10.html  Raid_T10.html  Raid_T9.html  Rogue_T10.html  Segv.html  Shaman_T10.html  Shaman_T9.html  Warlock_T10.html  Warrior_T10.html  mage.txt  sc_rawr.cpp  sc_report.cpp  sc_rogue.cpp  shaman.txt  simc  simulationcraft.h
other/cata/simc-433-2/profiles/Tier12H/: Raid_T12H_PTR.simc  Warlock_Demonology_T12H_PTR.simc  Warlock_T12H_PTR.simc
other/cata/simc-433-2/profiles/Tier13H/: Ultraxion.simc
other/cata/simc-433-2/profiles/Tier13N/: Ultraxion.simc
other/cata/simc-433-2/profiles_heal/: Death_Knight_Tank.simc  Druid_Restoration.simc  Druid_Tank.simc  Paladin_Heal.simc  Paladin_Tank.simc  Priest_AAA_Single_T12N.simc  Priest_Atonement_T12H.simc  Priest_Atonement_T12N.simc  Priest_Disc_AAA_AE_T12N.simc  Priest_Disc_AE_T12N.simc  Priest_Disc_PWS_T12N.simc  Priest_Disc_Single_Renew_T12N.simc  Priest_Disc_Single_T12H.simc  Priest_Disc_Single_T12N.simc  Priest_Heal_T12.simc  Priest_Holy_Single_T12N.simc  Warrior_Tank.simc  generate_Priest_Heal_T12.simc
other/cata/simc-433-2/source/: CMakeLists.txt  simc.vcproj  simc.vcxproj  simc.vcxproj.filters  simcqt.pro  simcqt.vcproj  simcqt.vcxproj
other/simc-335/NormalDistributionResearch/: MersenneTwister.cs  NormalGenerator.cs  Program.cs  SanityTests.cs  TestNormal.csproj  TestNormal.sln
other/simc-335/NormalDistributionResearch/Properties/: AssemblyInfo.cs
other/simc-335/gear-sets/: Naxx10_Gears.xlsx
other/simc-335/qt/: simcqt.vcproj  simulationcraftqt.h
other/simc-335/rpp-gearsets-details/: Naxx10_Gears.xlsx
profiles/: Death_Knight_T9.simc
